# vtk-minimal-extension

./: .gitignore  CMakeLists.txt  vtkMinimal.cxx  vtkMinimal.h
conda-recipe/: build.sh  meta.yaml  run_test.py
